--- a/videomember/templates/videomember/base.html
+++ b/videomember/templates/videomember/base.html
@@ -35,7 +35,7 @@
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">MyCourse</a>
 		      </li>
-		      {% if request.user.name != 'AnonymousUser' %}
+		      {% if user.is_authenticated %}
 		      <li class="nav-item">
 		        <a class="nav-link" href="{% url 'videomember:logout' %}">Logout</a>
 		      </li>
